Document tuweni/besu composite-build attempts; keep both on JitPack
Attempted composite builds for the two remaining Gradle forks; both revert to
JitPack with the findings recorded in docs/jitpack-migration.md:

- tuweni-kotlin: io.spring.dependency-management supplies dependency versions
  only in published POMs, not in the live project metadata a composite build
  consumes, so consumers fail to resolve version-less transitives (verified:
  "Could not find io.vertx:vertx-core:"). Reverted.
- besu: :evm builds fine from source, but a scoped composite is a no-op for
  :android-app (its config-level org.hyperledger.besu -> com.github.biafra23.besu
  substitution does not chain into the includeBuild substitution; verified via
  dependencyInsight), and the only wiring that works is build-wide, which moves
  the JVM daemon onto the Android-patched fork. besu is tag-pinned, so it stays
  on JitPack. Reverted.
- netty-kotlin: confirmed Maven-only; a partial `mvn install` fails on
  tests-classified intra-reactor jars. Maintainer will republish independently.

settings.gradle.kts keeps only the verified trueblocks-kotlin composite build.

https://claude.ai/code/session_01TAHdwnTtEeDsteaLmvDdfe